--- a/loginPage.html
+++ b/loginPage.html
@@ -11,7 +11,7 @@
               function validateForm(){
                      var username = document.getElementById('email').value;
                      var password = document.getElementById('password').value;
-                      if (username == 'CS360Test@gmail.com' && password == 'CS360'){
+                      if (username == 'CS360TestStudent@gmail.com' && password == 'CS360'){
                              document.getElementById('sucess').innerHTML = 'sucessful login';
                              // redirect code in page
                             // window.location.href = 'dashboardPage.html'
