Corrected some errors

--- a/dashboardpage.html
+++ b/dashboardpage.html
@@ -95,7 +95,7 @@
       </div>
       <div class="right_area">
               <a class="active" href="#">Quizzes</a>
-              <a class="active" href="forumLisitingPage.html">Forums</a>
+              <a class="active" href="forumListingPage.html">Forums</a>
       </div>
     </header>
     
@@ -187,9 +187,9 @@ function filterFunction() {
 }
 </script>
 <script>
-<!-- the function addtolist adds courses to the division inner html-->
+//<!-- the function addtolist adds courses to the division inner html-->
 function addtolist(csdetail,demoid){
-<!-- the if statments are stating if the id = 1, 2, 3, 4, or 5, that is what the course it is and initializing the course Description for that course-->
+//<!-- the if statments are stating if the id = 1, 2, 3, 4, or 5, that is what the course it is and initializing the course Description for that course-->
 var link=" ";
 if(demoid==1){
 link = "crp_360.html";
