seperate login pages now functional

--- a/loginPageInstructor.html
+++ b/loginPageInstructor.html
@@ -11,7 +11,7 @@
               function validateForm(form){
                      var username = document.getElementById('email').value;
                      var password = document.getElementById('password').value;
-                    if (username == 'CS360TestStudent@gmail.com' && password == 'CS360'){
+                    if (username == 'CS360TestInstructor@gmail.com' && password == 'CS360'){
 						document.getElementById('sucess').innerHTML = 'sucessful login';
                         // redirect code in page
                         // window.location.href = 'dashboardPage.html'
@@ -54,7 +54,7 @@
   								</div>
   								
 								<div class="loginInputBox">
-									<a href="loginPageInstructor.html"> Instructor Login </a>
+									<a href="loginPage.html"> Student Login </a>
 								</div>
 
 								<div class="loginInputBox">
