--- a/loginPageAdmin.html
+++ b/loginPageAdmin.html
@@ -11,7 +11,7 @@
               function validateForm(form){
                      var username = document.getElementById('email').value;
                      var password = document.getElementById('password').value;
-                    if (username == 'CS360TestStudent@gmail.com' && password == 'CS360'){
+                    if (username == 'CS360TestAdmin@gmail.com' && password == 'CS360'){
 						document.getElementById('sucess').innerHTML = 'sucessful login';
                         // redirect code in page
                         // window.location.href = 'dashboardPage.html'
@@ -58,7 +58,7 @@
 								</div>
 
 								<div class="loginInputBox">
-									<a href="loginPageAdmin.html"> Admin Login </a>
+									<a href="loginPage.html"> Student Login </a>
 								</div>
 
   								<div class="loginInputBox">
