formatting for loginpages: Now displays the user type

--- a/loginPageAdmin.html
+++ b/loginPageAdmin.html
@@ -32,6 +32,7 @@
   			
   			<div class="loginContentBox">
   				<div class="loginFormBox">
+                        <h2> Admin </h2><br/>
   						<h2> Login your Account </h2>
   						<form  method="POST" onsubmit="return validateForm(this);" action="dashboardpage.html">
   								<div class="loginInputBox">
