--- a/loginPage.html
+++ b/loginPage.html
@@ -32,6 +32,7 @@
   			
   			<div class="loginContentBox">
   				<div class="loginFormBox">
+					  	<h2> Student </h2>
   						<h2> Login your Account </h2>
   						<form  method="POST" onsubmit="return validateForm(this);" action="dashboardpage.html">
   								<div class="loginInputBox">
