--- a/loginPageInstructor.html
+++ b/loginPageInstructor.html
@@ -34,7 +34,7 @@
   				<div class="loginFormBox">
 					  	<h2> Instructor </h2>
   						<h2> Login your Account </h2>
-  						<form  method="POST" onsubmit="return validateForm(this);" action="dashboardpage.html">
+  						<form  method="POST" onsubmit="return validateForm(this);" action="dashboardpageInstructor.html">
   								<div class="loginInputBox">
   									<span> Email Address </span>
   									<input type="text" name= "email" id="email" required="Yes">
