corrected Previous teams html

--- a/registerPage.html
+++ b/registerPage.html
@@ -99,7 +99,7 @@
   						         
   						         <br>
   								<div class="registerInputBox">
-  								     <input type="submit" value="Register" id="register" onsubmit="return myFunction()">
+  								     <input type="submit" value="Register" id="register"/>
   								</div>
   								
   								<div class="registerInputBox">
