--- a/dashboardpageInstructor.html
+++ b/dashboardpageInstructor.html
@@ -107,7 +107,7 @@
                         <label for="file" id="uploadBtn"></label>
                 </div>     
                 <div class="userInfo">
-                        <h2> Sarina&nbsp;Lalria </h2> 
+                        <h2> Sample&nbsp;Instructor </h2> 
                 </div>   
                    <div class="logout">
                      <h3><a href="loginPageInstructor.html">Logout</a></h3>
