updated user info

--- a/dashboardpageAdmin.html
+++ b/dashboardpageAdmin.html
@@ -107,7 +107,7 @@
                         <label for="file" id="uploadBtn"></label>
                 </div>     
                 <div class="userInfo">
-                        <h2> Sarina&nbsp;Lalria </h2> 
+                        <h2> Sample&nbsp;Admin </h2> 
                 </div>   
                    <div class="logout">
                      <h3><a href="loginPageAdmin.htmls">Logout</a></h3>
