--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <span class="navbar-brand mb-0 h1 text-dark">My Dashboard</span>
+                <a class="navbar-brand mb-0 h1 text-dark" type="button" href="dashboardpage.html">My Dashboard</a>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
