edited instructor dashboard

--- a/dashboardpageInstructor.html
+++ b/dashboardpageInstructor.html
@@ -92,7 +92,7 @@
         <h3>Dashboard </h3>
       </div>
       <div class="right_area">
-              <a class="active" href="#">Quizzes</a>
+              <a class="active" href="#">Create a Quizz</a>
               <a class="active" href="forumListingPage.html">Forums</a>
       </div>
     </header>
@@ -105,14 +105,14 @@
                         <label for="file" id="uploadBtn"></label>
                 </div>     
                 <div class="userInfo">
-                        <h2> Sample&nbsp;Instructor </h2> 
+                        <h2> Sample<br>Instructor </h2> 
                 </div>   
                    <div class="logout">
                      <h3><a href="loginPageInstructor.html">Logout</a></h3>
                 </div> 
                    <div class="userInfo2">
                        
-                        <p><br> Age : 20 <p>
+                        <p><br><br><br> Age : 37 <p>
                         <p> City/State : Fort Wayne, IN <p>
                         <p> Most Recent Education: College Undergraduate<p>
                 </div>  
