created question (replace quiz)

--- a/createQuestion.html
+++ b/createQuestion.html
@@ -52,14 +52,18 @@
         <div class="container container-fluid">
             <div class="illuminator">
                 <div class="card p-4" style="width: 100%;">
-                    <h5 class="card-header text-dark">Create New Post</h5>
+                    <h5 class="card-header text-dark">Ask a Question</h5>
                     <br>
                     <div class="t-2">
-                        <input class="form-control form-control-lg" type="text" placeholder="Your Title">
-                    <input class="form-control" type="text" placeholder="Tags">
+                        <input class="form-control form-control-lg" type="text" placeholder="Question Topic">
                     </div>
                     <br>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5">Your post here</textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Question(s) Here"></textarea>
+                    <div class="askQuestBtn">
+                        <a href="#">
+                            <input type="submit" id="askQuestnBtn" value="Ask Question">
+                        </a>
+                    </div>
                 </div>
                
             </div>
