--- a/dashboardpageInstructor.html
+++ b/dashboardpageInstructor.html
@@ -92,7 +92,7 @@
         <h3>Dashboard </h3>
       </div>
       <div class="right_area">
-              <a class="active" href="#">Create a Quizz</a>
+              <a class="active" href="createQuestion.html">Ask a Question</a>
               <a class="active" href="forumListingPage.html">Forums</a>
       </div>
     </header>
