updated for question submissison

--- a/createQuestion.html
+++ b/createQuestion.html
@@ -60,7 +60,7 @@
                     <br>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Question(s) Here"></textarea>
                     <div class="askQuestBtn">
-                        <a href="#">
+                        <a href="questionCreatedSuccess.html">
                             <input type="submit" id="askQuestnBtn" value="Ask Question">
                         </a>
                     </div>
