created file upload page

--- a/fileUpload.html
+++ b/fileUpload.html
@@ -17,14 +17,26 @@
                        reader.readAsDataURL(file);
                 }
             }
+            function checkLoadStatus(){
+                var loadState = document.getElementById("uploadFileBtn");
+                if (loadState.files.length == 0){
+                    alert("Please Select a File to Upload");
+                    return false;
+                }
+                else{
+                    return true;
+                }
+                
+            }
         </script>
     </head>
-    <body class="mainBody" onsubmit="">
+    <body class="mainBody">
         <h1>Please Select the File that you would like to Upload:</h1>
-        <form class="iframeClass">
+        <form class="iframeClass" onsubmit="return checkLoadStatus()" action="fileUploadSuccess.html">
             <input type="file" id="uploadFileBtn" onchange="previewFile()">
-            <iframe src="" width="100%" height="500px" title="your file"></iframe>
-            <input type="submit" id="submit button" value="submit">
+            <p>File Preview:</p>
+            <iframe src="" id="frame" width="100%" height="500px" title="Preview"></iframe>
+            <input type="submit" id="submitBtn" value="submit">
         </form>
     </body>
 </html>
