--- a/dashboardpageInstructor.html
+++ b/dashboardpageInstructor.html
@@ -93,7 +93,7 @@
       </div>
       <div class="right_area">
               <a class="active" href="createQuestion.html">Ask a Question</a>
-              <a class="active" href="forumListingPage.html">Upload a File</a>
+              <a class="active" href="fileUpload.html">Upload a File</a>
       </div>
     </header>
     
