--- a/fileUpload.html
+++ b/fileUpload.html
@@ -58,10 +58,10 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-light btn" href="#" style="background-color:#222;">Quizzes</a>
+                    <a class="nav-link text-light btn" href="createQuestion.html" style="background-color:#222;">Ask a Question</a>
                 </li>
                 <li class="nav-item" style="margin-left: 10px;">
-                    <a class="nav-link text-dark btn" href="#" style="background-color:#ddd;">Forums</a>
+                    <a class="nav-link text-dark btn" href="fileUpload.html" style="background-color:#ddd;">Upload a File</a>
                 </li>
             </ul>
         </div>
