--- a/questionCreatedSuccess.html
+++ b/questionCreatedSuccess.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="registerSuccess.css">
+        <link rel="stylesheet" href="questionCreatedSuccess.css">
     </head>
     <body>
     <img src="images\questionSuccessBG.png">
@@ -31,7 +31,7 @@
                 <br>
                 Now Pending Admin Approval...
             </p>
-            <form id="toLogin" action="dashboardpageInstructor.html">
+            <form id="toDash" action="dashboardpageInstructor.html">
                 <input type="submit" value="Back to Dashboard"/>
             </form>
         </div>
