--- a/createQuestion.html
+++ b/createQuestion.html
@@ -18,6 +18,7 @@
 
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 <script>
+    //checks to make sure that the text and question parameters are filled out
     function checkParamaters(){
         var topicText = document.getElementById("topic").value;
         var questionText = document.getElementById("exampleFormControlTextarea1").value;
