--- a/dashboardpage.html
+++ b/dashboardpage.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="w3.css">
     <script>
+        //function to change profile image on selection
          function previewFile() {
                 var preview = document.querySelector('img');
                 var file    = document.querySelector('input[type=file]').files[0];
