--- a/fileUpload.html
+++ b/fileUpload.html
@@ -18,6 +18,7 @@
 
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 <script>
+    //will update iframe (id="frame") once a file is properly selected
     function previewFile() {
                 var preview = document.querySelector('iframe');
                 var file    = document.querySelector('input[type=file]').files[0];
@@ -31,6 +32,8 @@
                        reader.readAsDataURL(file);
                 }
             }
+            /*to make sure that there is a file selected to upload
+            this will prevent the instructor from making blank uploads*/
             function checkLoadStatus(){
                 var loadState = document.getElementById("uploadFileBtn");
                 if (loadState.files.length == 0){
@@ -84,6 +87,12 @@
                     </div>
                     <br>
                     <p id="filPrev">File Preview:</p>
+                    <!--I decided to use an iFrame instead of simply imbedding the file in the text.
+                    This will allow for the instructor to veiw a preview of the file they have selected
+                    with the goal being to prevent any mistaken uploads
+                
+                    Future groups may want to consider implementing an embed option, considering chromes inability
+                    to properly display word documents-->
                     <iframe src="" id="frame" width="100%" height="500px" title="Preview"></iframe>
                     <div class="uploadBtn">
                         <form onsubmit="return checkLoadStatus()" action="fileUploadSuccess.html">
