corrected CS360 link

--- a/forumListingPage2.html
+++ b/forumListingPage2.html
@@ -7,16 +7,17 @@
     <title>Forum Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
+<header id="forumListingPageHeader">
  
     <div class="left_area">
       <h3>Forums Page </h3>
     </div>
     <div class="right_area">
-        <a class="active" href="#Quizzes">Quizzes</a>
-        <a class="active" href="forumListingPage.html">Forums</a>
+        <a class="quizzBtn" href="#Quizzes">Quizzes</a>
+        <a class="forumBtn" href="forumListingPage.html">Forums</a>
     </div>
 </header>
+<body id="forumListingPageBody">
 <div class="topnav">
 
     <div class="searchbar">
@@ -46,7 +47,7 @@
                 <a class="reply" href="forumListingPage3.html">Reply</a>  
             </div>
             <div class = "tag">
-                <a class="CS360" href="CS360.html">CS360</a> <!--Link to CS360's page-->
+                <a class="CS360" href="crp_360.html">CS360</a> <!--Link to CS360's page-->
             </div>
             <div class="rating"><!--
                 --><input name="stars" id="e1" type="radio"></a><label for="e1">☆</label><!--
@@ -58,4 +59,5 @@
         </div> 
     </div>
 </div>
+</body>
 </html>
