--- a/forumListingPage3.html
+++ b/forumListingPage3.html
@@ -46,7 +46,7 @@
                 <a class="reply" href="forumListingPage3.html">Reply</a>  
             </div>
             <div class = "tag">
-                <a class="CS360" href="CS360.html">CS360</a> <!--Link to CS360's page-->
+                <a class="CS360" href="crp_360.html">CS360</a> <!--Link to CS360's page-->
             </div>
             <div class="rating"><!--
                 --><input name="stars" id="e1" type="radio"></a><label for="e1">☆</label><!--
