--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
     </script>
 
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script>
+        function checkParamaters(){
+            var pTitle = document.getElementById("postTitle").value;
+            var pTag = document.getElementById("postTags").value;
+            var pText = document.getElementById("postText").value;
+            if(pText == "" && pTitle == ""){
+                alert("Please enter Text and a Title");
+                return false;
+            }
+            else if(pTitle == ""){
+                alert("Please enter a Title");
+                return false;
+            }
+            else if(pText == ""){
+                alert("Please enter some Text");
+                return false;
+            }
+        }
+    </script>
+
 
 </head>
 
@@ -50,19 +70,21 @@
         </script>
         <br>
         <div class="container container-fluid">
+            <form onsubmit="checkParamaters()" action="#">
             <div class="illuminator">
                 <div class="card p-4" style="width: 100%;">
-                    <h5 class="card-header text-dark">Create New Post</h5>
+                    <h5 class="card-header text-dark"><input type="submit" value="Create New Post"></h5>
                     <br>
                     <div class="t-2">
-                        <input class="form-control form-control-lg" type="text" placeholder="Your Title">
-                    <input class="form-control" type="text" placeholder="Tags">
+                        <input class="form-control form-control-lg" id="postTitle" type="text" placeholder="Your Title">
+                    <input class="form-control" id="postTags" type="text" placeholder="Tags (Optional)">
                     </div>
                     <br>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5">Your post here</textarea>
+                    <textarea class="form-control" id="postText" rows="5" placeholder="Your Post Here"></textarea>
                 </div>
                
             </div>
+            </form>
         </div>
       </div>
     
