update index href

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a class="nav-link text-light btn" href="#" style="background-color:#222;">Quizzes</a>
                 </li>
                 <li class="nav-item" style="margin-left: 10px;">
-                    <a class="nav-link text-dark btn" href="#" style="background-color:#ddd;">Forums</a>
+                    <a class="nav-link text-dark btn" href="forumListingPage.html" style="background-color:#ddd;">Forums</a>
                 </li>
             </ul>
         </div>
@@ -70,7 +70,7 @@
         </script>
         <br>
         <div class="container container-fluid">
-            <form onsubmit="checkParamaters()" action="#">
+            <form onsubmit="checkParamaters()" action="forumListingPage.html">
             <div class="illuminator">
                 <div class="card p-4" style="width: 100%;">
                     <h5 class="card-header text-dark"><input type="submit" value="Create New Post"></h5>
